<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.RegisterActivity">
    <EditText
        android:hint="First Name"
        android:layout_margin="10dp"
        android:id="@+id/etFname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="Last Name"
        android:layout_margin="10dp"
        android:id="@+id/etLname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="Username"
        android:layout_margin="10dp"
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="Password"
        android:layout_margin="10dp"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="Confirm password"
        android:layout_margin="10dp"
        android:id="@+id/etConfirmPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:text="Add User"
        android:layout_margin="10dp"
        android:id="@+id/btnAddUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>