<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DashboardActivity">

    <ImageButton
        android:id="@+id/btnAddStudent"
        android:layout_width="212dp"
        android:layout_height="181dp"
        android:layout_marginTop="28dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/addstudent" />

    <ImageButton
        android:id="@+id/btnViewStudent"
        android:layout_width="199dp"
        android:layout_height="186dp"
        android:layout_marginTop="28dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddStudent"
        app:srcCompat="@drawable/viewstudent" />

    <ImageButton
        android:id="@+id/btnGoogleMap"
        android:layout_width="199dp"
        android:layout_height="186dp"
        android:layout_marginTop="36dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnViewStudent"
        app:srcCompat="@drawable/googlemap" />
</androidx.constraintlayout.widget.ConstraintLayout>